# streamvizzard-provinspector

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml
docs/: figures.py  provenance_model.md
src/provinspector/: data.py  provinspector.py
src/provinspector/domain/: constants.py  model.py
src/provinspector/prov/: model.py
src/provinspector/storage/: adapter.py  database.py  repository.py
src/provinspector/utils/: dumper.py  prov_utils.py
tests/: fixtures.py  test_adapter.py  test_interface.py  test_log.py  test_prov_model.py  test_prov_utils.py  test_provinspector.py  test_repository.py
tests/resources/: dump_exec.txt  dump_init.txt
